--- a/index.Rmd
+++ b/index.Rmd
@@ -50,3 +50,4 @@ I am interested in the policy and applications of climate mapping vulnerability 
 
 * [rkopper610@gmail.com](mailto:rkopper610@gmail.com)
 
+![](img/Buna.png){width=400px}
