--- a/index.Rmd
+++ b/index.Rmd
@@ -13,11 +13,11 @@ output:
 
 ## About
 
-I’ve loved being in nature since I was young, which led me to major in environmental conservation as an undergraduate. After college, I moved to Ethiopia as a Peace Corps volunteer and worked within the agriculture and forestry sectors. I extended my time as a volunteer and worked with Catholic Relief services to engage with the USAID funded Farmer to farmer program. As I continued to work in Ethiopia, I became more interested in the complex interaction between agricultural systems and nature. These interests led me to the department of international development,community and Environment (IDCE) where I pursued a Master's in Environmental Science & Policy with combined study in Geospatial Analysis and agricultural research. My thesis focused on resilience to climate variability among smallholder coffee farmers in Ethiopia. I examined how smallholder coffee-producing households are adapting their land-use strategies in response to changing precipitation patterns and increased incidence of coffee plant diseases in two different regions of Ethiopia. 
+I’ve loved being in nature since I was young, which led me to major in environmental conservation as an undergraduate. After college, I moved to Ethiopia to serve as a Peace Corps volunteer and worked within the agriculture and forestry sectors. I extended my time as a volunteer and worked with Catholic Relief services to engage with the USAID funded Farmer to farmer program. As I continued to work in Ethiopia, I became more interested in the complex interaction between agricultural systems and nature. These interests led me to the department of international development,community and Environment (IDCE) where I pursued a MSc in Environmental Science & Policy with combined study in Geospatial Analysis and agricultural research. My thesis focused on resilience to climate variability among smallholder coffee farmers in Ethiopia. I examined how smallholder coffee-producing households are adapting their land-use strategies in response to changing precipitation patterns and increased incidence of coffee plant diseases in two different regions of Ethiopia. 
 
-I am interested in the intersection of sustainability and data science. My passions revolve around leveraging emerging technologies and data to map climate change vulnerability especially in regards to food security and agriculture development. 
+Currently, I am consulting for the International Research Institute for Climate and Society (IRI), Earth Institute at Columbia University. I am working with the Adapting Agriculture to Climate Today, for Tomorrow (ACToday) project to develop the "MyCoffeeFarm" climate services advisory tool for Ethiopia. This tool translates climate and economic information for decision-making and risk management at the coffee farm level.
 
-
+Overall, I am interested in the intersection of sustainability and data science. My passions revolve around leveraging emerging technologies and data to map climate change vulnerability especially in regards to food security and agriculture development. 
 
 ## Interests
 
